bomc-kustomize-argocd-ping/base/040-postgres-dc-base.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    app: postgres
    deploymentconfig: postgres
  template:
    metadata:
      labels:
        app: postgres
        deploymentconfig: postgres
    spec:
      containers:
      - name: postgres
        image: 172.30.1.1:5000/openshift/postgresql@sha256:2727b9b84cc03271c2c3b3cd954de1c5a4f025200b2eaff6bb7d1a7401930d2a
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: "postgres-data"
          mountPath: "/var/lib/pgsql/data"
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        capabilities: {}
        securityContext:
          capabilities: {}
          privileged: false
      volumes:
      - name: "postgres-data"
        emptyDir:
          medium: ''
