bomc-kustomize-argocd-ping/base/070-ping-dc-base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ping
  name: ping
spec:
  replicas: 1
  #selector:
  #  app: ping
  #  deploymentconfig: ping
  template:
    metadata:
      labels:
        app: ping
        deploymentconfig: ping
    spec:
      containers:
        - name: ping
          image: 172.30.1.1:5000/bomc/ping:v1.0.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          # Set 'envFrom' to references 'ping-cm' file, see 030-postgres-cm-base.
