bomc-kustomize-argocd-ping/base/090-ping-dc-base.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ping
  name: ping
spec:
  replicas: 1
  selector:
    app: ping
    deploymentconfig: ping
  template:
    metadata:
      labels:
        app: ping
        deploymentconfig: ping
    spec:
      containers:
      - name: ping
        image: 172.30.1.1:5000/bomc/ping:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        # Set 'envFrom' to references 'ping-cm' file, see 030-postgres-cm-base.
